--- a/start.html
+++ b/start.html
@@ -45,7 +45,7 @@
 <body>
     <div id="scroll" class="grid-container">
         <form class="title" onsubmit="startARG(event)">
-            <label for="fname" style="--font-color:#aaaaaa">Discord ID</label><br>
+            <label for="fname" style="--font-color:#aaaaaa">Your name</label><br>
             <input type="text" id="fname" name="disc_id"><br>
             <h1 class="some_text">Select games you are interested in:</h1>
             <input type="checkbox" id="game1" name="game1" value="DRG">
