Wrong location for index

--- a/start.html
+++ b/start.html
@@ -103,7 +103,7 @@
 
                     xhr2.onreadystatechange = function() {
                         if (xhr1.readyState === 4 && xhr1.status === 200) {
-                            window.location.href = "../index.html"
+                            window.location.href = "./index.html"
                         }
                     }
 
