--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <link rel="stylesheet" href="https://unpkg.com/terminal.css@0.7.4/dist/terminal.min.css" />
 
-<h5 class="terminal-prompt">guest</h5>
+<body class="terminal">
+<h5 class="terminal-prompt">Terminal Prompt</h5>
+</body>
