make dummy on screen

--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
         height: fit-content !important;
         overflow: visible;
         margin-bottom: 1%;
-        margin-top: 1%;
     }
 
     .title_text {
@@ -79,7 +78,7 @@
 </style>
 
 <body class="terminal">
-    <input type="text" id="dummyInput" style="position: absolute; top: -9999px; left: -9999px; opacity: 0;">
+    <input type="text" id="dummyInput" style="opacity: 0;">
     <div class="title">
         <span class="title_text">
             The Kare Christmas ARG
