--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         grid-template-columns: 1;
         grid-template-rows: auto;
         background-color: black;
-        --font-color: #00ff00;
+        --font-color: #00d000;
         --primary-color: #ffffff;
     }
 
