Added refresh tip

--- a/invitation.html
+++ b/invitation.html
@@ -157,7 +157,7 @@
                         cont = document.getElementById("cont");
                         inst = document.createElement("h1");
                         inst.className = "solve_text";
-                        inst_text = "Wrong code!"
+                        inst_text = "Wrong code! You can refresh the page to get the image back!"
 
                         text_node = document.createTextNode(inst_text)
                         inst.appendChild(text_node)
