Prepare for go live.

--- a/invitation.html
+++ b/invitation.html
@@ -147,7 +147,7 @@
 
                         inst = document.createElement("h1");
                         inst.className = "solve_text";
-                        inst_text = "Congratulations! Send to the owner this code: \n" + getCookie("userHashID");
+                        inst_text = "Congratulations! DM Kare on discord (id: karetm) this code: \n" + getCookie("userHashID");
 
                         text_node = document.createTextNode(inst_text)
                         inst.appendChild(text_node)
