--- a/start.html
+++ b/start.html
@@ -45,7 +45,7 @@
 <body>
     <div id="scroll" class="grid-container">
         <form class="title" onsubmit="startARG(event)">
-            <label for="fname" style="--font-color:#aaaaaa">Your name</label><br>
+            <label for="fname" style="--font-color:#aaaaaa">Discord ID</label><br>
             <input type="text" id="fname" name="disc_id"><br>
             <h1 class="some_text">Select games you are interested in:</h1>
             <input type="checkbox" id="game1" name="game1" value="DRG">
@@ -56,7 +56,7 @@
             <label for="game3" style="--font-color:#aaaaaa"> A Little To The Left</label><br>
             <input type="checkbox" id="game4" name="game4" value="SOW">
             <label for="game4" style="--font-color:#aaaaaa"> Middle Earth: Shadow of War</label><br>
-            <input type="submit" value="Submit">
+            <input id="but" type="submit" value="Submit">
         </form>
     </div>
 
@@ -65,6 +65,8 @@
 
         function startARG(event) {
             event.preventDefault();
+
+            document.getElementById("but").disabled = "true";
 
             // Get Discord ID from the text box
             var discordID = document.getElementById("fname").value;
